# keryx

./: .env.example  .gitignore  AGENTS.md  AGENT_INTEGRATION.md  ARCHITECTURE.md  HERMES_SETUP.md  MIGRATION.md  Makefile  OPERATIONS.md  README.md  SECURITY.md  TASKLIST.md  config.example.yaml  pyproject.toml
docs/: CONTEXT_MODEL.md
docs/adr/: 0001-context-first-memory-model.md  0002-path-first-discovery-over-strict-typing.md  0003-mcp-first-with-cli-and-skill-adapters.md
examples/: local-mcp-client.json  mcp-clients.md  tailscale-mcp-client.json
scripts/: check_mcp.py  install_launchd.py
skills/hermes-keryx/: SKILL.md
src/knowledge_gateway/: __init__.py  api.py  chunking.py  cli.py  config.py  launchd.py  mcp_server.py  models.py  parsing.py  policies.py  ranking.py  semantic.py  service.py  storage.py  util.py  watcher.py  writing.py
templates/: concept-note.md  decision-note.md  inbox-capture.md  project-overview.md  session-note.md  summary-note.md  task-note.md
tests/: conftest.py  test_config.py  test_e2e.py  test_health_persistence.py  test_launchd.py  test_mcp.py  test_parser.py  test_parser_resilience.py  test_project_context.py  test_ranking.py  test_service_api.py  test_write_flows.py  test_write_policies.py
